--- a/EcommerceWeb/Views/Roles/Index.cshtml
+++ b/EcommerceWeb/Views/Roles/Index.cshtml
@@ -2,27 +2,26 @@
 @{
     ViewBag.Title = "Index";
 }
-
 <h2>Available roles</h2>
+@if (Request.IsAuthenticated)
+{
+    <table>@Html.ActionLink("Create Role", "Create", "Roles")</table>
+    <table>@Html.ActionLink("See Users", "Index", "UserList")</table>
 
-<table>@Html.ActionLink("Create Role", "Create", "Roles")</table>
-<table>@Html.ActionLink("See Users", "Index", "UserList")</table>
 
+    <table>@Html.ActionLink("Create a user", "Register", "Account")</table>
+}
 
-<table>@Html.ActionLink("Create a user", "Register", "Account")</table>
-
-<table class="table table-bordered table-hover">
-
-    <tr>
-        <th>Role Name</th>
-    </tr>
-
-    @foreach(var item in Model)
-    {
+    <table class="table table-bordered table-hover">
         <tr>
-            <td>
-                @item.Name
-            </td>
+            <th>Role Name</th>
         </tr>
-    }
-</table>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @item.Name
+                </td>
+            </tr>
+        }
+    </table>
