--- a/EcommerceWeb/Views/UserList/Edit.cshtml
+++ b/EcommerceWeb/Views/UserList/Edit.cshtml
@@ -5,25 +5,32 @@
     ViewBag.Title = "Edit";
 }
 <h2>Give user a new role</h2>
-@using (Html.BeginForm(FormMethod.Post))
+
+@if (Request.IsAuthenticated)
 {
-    @Html.AntiForgeryToken()
 
-    <table class="table">
-        @Html.HiddenFor(model => model.UserId)
-        @Html.HiddenFor(model => model.UserRoles)
-        <tr>
-            <td>Email</td>
-            <td>@Html.DisplayFor(model => model.Email, new { @class = "form-control" })</td>
-        </tr>
 
-        <tr>
-            <td>Role</td>
-            <td>
-                @Html.DropDownListFor(model => model.UserDropDown, Model.AvailableUsers)
-            </td>
-        </tr>
-    </table>
+    using (Html.BeginForm(FormMethod.Post))
+    {
+        @Html.AntiForgeryToken()
 
-    <input type="submit" value="Save" class="btn btn-default" style="background-color:lightgreen" />
+        <table class="table">
+            @Html.HiddenFor(model => model.UserId)
+            @Html.HiddenFor(model => model.UserRoles)
+            <tr>
+                <td>Email</td>
+                <td>@Html.DisplayFor(model => model.Email, new { @class = "form-control" })</td>
+            </tr>
+
+            <tr>
+                <td>Role</td>
+                <td>
+                    @Html.DropDownListFor(model => model.UserDropDown, Model.AvailableUsers)
+                </td>
+            </tr>
+        </table>
+
+        <input type="submit" value="Save" class="btn btn-default" style="background-color:lightgreen" />
+    }
+
 }
